--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
 		 <url>https://maven.pkg.github.com/g-filomena/PedSimCityNight</url>
 	   </repository>
 	</distributionManagement>
+
+	<repositories>
+		<repository>
+			<id>local-maven-repo</id>
+			<url>file:///${project.basedir}/lib</url>
+		</repository>
+	</repositories>
 	
     <dependencies>
 	
@@ -79,34 +86,19 @@
 			<artifactId>GeoMason-light</artifactId>
 			<version>1.1.9</version>
         </dependency>
+
+		<!-- Mason (Local) -->
+		<dependency>
+			<groupId>sim</groupId>
+			<artifactId>mason</artifactId>
+			<version>21</version>
+		</dependency>
 		
     </dependencies>
 
     <build>
         <plugins>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-install-plugin</artifactId>
-				<version>3.0.0-M1</version>
-				<executions>
-					<execution>
-						<id>install-mason</id>
-						<phase>initialize</phase> 
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<file>${project.basedir}/lib/mason-21.jar</file> 
-							<groupId>sim</groupId>
-							<artifactId>mason</artifactId>
-							<version>22</version>
-							<packaging>jar</packaging>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		
 			<!-- UTF -->
 			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
